tests/miniJava/pos/001053_cdrc2.MiniJava
class java { public static void Main ( String [ ] java ) { if ( this ) System.out.println ( { } ) ; else java = 0 ; } }
