tests/miniJava/neg/001481_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { java = new int this [ 0 ] ; } }
